--- a/styles/form-component.css
+++ b/styles/form-component.css
@@ -1,28 +1,29 @@
 form button {
-  top: 50%;
-  gap: 0.4rem;
-  margin: 30px 20px;
+  margin: 20px 0 0;
+  justify-self: center;
 }
 
 form label {
-  float: left;
-  padding: 10px 10px 10px 10px;
-  width: 25%;
+  margin: 0;
+  padding: 0;
+  white-space: normal;
+  overflow-wrap: anywhere;
 }
 
 form input {
-  float: left;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  font-size: 0.9em;
+  font-size: 0.7em;
   width: 75%;
 }
 
+form {
+  display: grid;
+  align-items: center;
+  row-gap: 15px;
+}
+
 .formFields {
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: flex-start;
-  margin: 10px 10px;
-  padding: 10px 10px;
+  display: grid;
 }
