--- a/styles/modal.css
+++ b/styles/modal.css
@@ -9,7 +9,8 @@
   gap: 0.4rem;
   width: 450px;
   padding: 1.3rem;
-  min-height: 450px;
+  max-width: 90vw;
+  max-height: 90vh;
   position: fixed;
   z-index: 2;
   background-color: white;
@@ -19,7 +20,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  overflow: auto;
 }
+
 
 .overlay {
   position: fixed;
