--- a/styles/selectors.css
+++ b/styles/selectors.css
@@ -33,10 +33,6 @@ option:nth-of-type(odd) {
   background: white;
 }
 
-div {
-  padding-bottom: 5px;
-}
-
 button {
   border-radius: 4px;
   border-width: 1px;
